--- a/GMI-angular/src/app/authentication/logout/logout.component.html
+++ b/GMI-angular/src/app/authentication/logout/logout.component.html
@@ -26,7 +26,7 @@
                 <div class="flex items-center mb-[20px]">
                     <img src="images/admin.png" alt="admin-image" class="rounded-full w-[50px] border-[2px] ltr:mr-[13px] rtl:ml-[13px] border-primary-200">
                     <span class="font-semibold text-black dark:text-white block">
-                        Olivia John
+                        {{getConnectedUser()}}
                     </span>
                 </div>
                 <a routerLink="/authentication" class="md:text-md block w-full text-center transition-all rounded-md font-medium py-[12px] px-[25px] text-white bg-primary-500 hover:bg-primary-400">
